# aesprite-textbook

./: .gitignore  .pre-commit-config.yaml  AESPRITE-TIER1-ADDITIONAL-RESOURCES.md  AESPRITE-TIER1-MODULE-1.md  AESPRITE-TIER1-MODULE-2.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FIXES_ANALYSIS_AND_NEXT_STEPS.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  PR-ISSUES.html  PR_CODE_REVIEW_SUMMARY.md  PR_CONTENT.md  PR_DESCRIPTION.md  PR_FINAL_DESCRIPTION.md  README.md  TEAM_2_DELIVERY_SUMMARY.txt  TRANSFORMATION_SUMMARY.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.txt  asset_validator.py  criticism-091425.md  gemini_integration.py  klutz-press-design.md  klutz-technical-implementation-12and3.md  klutz-technical-implementation-13.md  klutz-technical-implementation-14.md  klutz-technical-implementation-1and2.md  klutz-technical-implementation-23456and7.md  klutz-technical-implementation-6.md  klutz-technical-implementation-89101112ish.md  klutz-workbook-action-plan.md  klutz_compositor.py  nano_banana_integration.py  post_processor.py  prompt_generator.py  pyproject.toml  pytest.ini  (+3 more)
.github/workflows/: ci.yml
config/: master_config.yaml
docs/: README.md  gemini-klutz-plan-v2.md  kimi-improvement-guide.md  klutz-technical-documentation-toc.md  klutz-technical-implementation-11.md  klutz-technical-implementation-9.md
docs/api/: COMPOSITOR_USAGE.md  VALIDATOR_QUICK_REFERENCE.md  api-reference.md  configuration-guide.md  usage-examples.md
docs/architecture/: data-flow.md  directory-structure.md  system-overview.md
docs/curriculum/: AESPRITE-TIER1-ADDITIONAL-RESOURCES.md  AESPRITE-TIER1-MODULE-1.md  AESPRITE-TIER1-MODULE-2.md  AESPRITE-TIER1-MODULE-3.md  AESPRITE-TIER1-MODULE-4.md  AESPRITE-TIER1-MODULE1-EXPANDED.md
docs/design/: designrules3.md  new-stylebook.md  nickelodeon-goosebumps-design.md
docs/planning/: gemini-klutz-plan-v2.md  klutz-workbook-action-plan.md
docs/reviews/: kimi-improvement-guide.md
docs/technical/: ASSET_VALIDATOR_IMPLEMENTATION.md  TEAM3_DELIVERY.md  TESTING_SUMMARY.md  klutz-technical-implementation-1.md  klutz-technical-implementation-10.md  klutz-technical-implementation-11.md  klutz-technical-implementation-12.md  klutz-technical-implementation-12and3.md  klutz-technical-implementation-13.md  klutz-technical-implementation-14.md  klutz-technical-implementation-15.md  klutz-technical-implementation-2.md  klutz-technical-implementation-23456and7.md  klutz-technical-implementation-23and4.md  klutz-technical-implementation-3.md  klutz-technical-implementation-4.md  klutz-technical-implementation-5.md  klutz-technical-implementation-6.md  klutz-technical-implementation-7.md  (+5 more)
tests/: README.md  __init__.py  conftest.py  test_asset_validator.py  test_gemini_integration.py  test_klutz_compositor.py  test_nano_banana_integration.py  test_post_processor.py  test_prompt_generator.py  test_quality_assurance.py
(+11 files in other folders)
